--- a/index.html
+++ b/index.html
@@ -66,10 +66,7 @@
   <script type="text/javascript" src="slick/slick.min.js"></script>
 
   <!-- Images loaded and Masonry -->
-  <script src="./js/imagesloaded.pkgd.js"></script>
-  <script src="./js/masonry.pkgd.min.js"></script>
-
-  <script src="js/index.js?random=<?php echo uniqid(); ?>"></script>
+  <script src="js/index.js"></script>
 
   <!-- contentful read-only api -->
   <script src="js/contentful.js"></script>
@@ -105,7 +102,6 @@
     <div class="inner">
       <div class="contentbox portfoliobox">
         <div class="grid" id="pushgrid">
-          <div class="grid-sizer"></div>
         </div>
       </div>
     </div>
